--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     },
     "require": {
-        "php": ">=5.6.4"
+        "php": ">=7.0",
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "minimum-stability": "dev"
 }
