New setting module version&other improvements
- Use setting 2.0 version
- Some code formatting
- Remove unnecessary folders

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "php": ">=7.0",
         "yajra/laravel-datatables-oracle": "~8.0",
-        "maatwebsite/excel": "~2.1.0"
+        "maatwebsite/excel": "~2.1.0",
+        "netcore/module-setting": "^2.0"
     },
     "minimum-stability": "dev"
 }
